# osm-sandbox

./: .gitignore  Dockerfile  README.md  docker-compose.yml  osm-entrypoint.sh  seed-users.sh
.github/workflows/: build.yml
docs/: CNAME  get-installer.sh  install-docker.sh  install-sandbox.sh  utils.sh
importer/: Dockerfile  README.md  import.sh  importer.py  pyproject.toml
nginx/: Dockerfile  build_imgs.sh  container-entrypoint.sh  options-security.conf
nginx/templates/: cert-init.conf.template  osm-dev.conf.template  osm.conf.template
scripts/: update-passwords.sh
updater/: README.md
